--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.2.0
   smooth_page_indicator: ^1.2.1
   shared_preferences: ^2.2.2
+  carousel_slider: ^5.1.1
+
 
 
 dev_dependencies:
